main.css
/* FONTS */
@font-face {
  font-family: "Untitled Sans";
  src: url('assets/fonts/Untitled_Sans_Bold.woff2') format('woff2');
  font-weight: 700;
  font-display: swap;
}

@font-face {
  font-family: "Untitled Sans";
  src: url('assets/fonts/Untitled_Sans_Light.woff2') format('woff2');
  font-weight: 300;
  font-display: swap;
}

/* BASIC RESET */
*, *::before, *::after {
  box-sizing: border-box;
}

html, body, h1, h2, h3, h4, h5, h6, p, a, ol, ul, li, blockquote, figure, pre, button, iframe, hr {
  margin: 0;
  padding: 0;
  font-size: 100%;
  font-weight: 300;
  font-family: "Untitled Sans", system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  line-height: 1.3em;
  -webkit-font-smoothing: antialiased;
}

ul, ol {
  list-style-type: none;
}

/* LAYOUT */
main {
  min-height: 100vh;
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  grid-template-rows: 1fr auto;
}

section {
  padding: 32px;
  display: flex;
  flex-direction: column;
}

#box-1 {
  grid-column-start: 1;
  grid-column-end: 4;
  grid-row-start: 1;
  background-color: #e2ded7;
}

#box-2, #box-3--vocable, #box-4--waterpik, #box-5--natgeo {
  justify-content: space-between;
}

#box-2 {
  grid-column-start: 4;
  grid-column-end: 7;
  grid-row-start: 1;
  background-color: #157d4e;
}

#box-3--vocable {
  grid-column-start: 1;
  grid-column-end: 3;
  grid-row-start: 2;
  background-color: #6f42d1;
}

#box-4--waterpik {
  grid-column-start: 3;
  grid-column-end: 5;
  grid-row-start: 2;
  background-color: #3257b5;
}

#box-5--natgeo {
  grid-column-start: 5;
  grid-column-end: 7;
  grid-row-start: 2;
  background-color: #eab33a;
}

.btn {
  width: max-content;
  margin-top: 32px;
  padding: 16px 24px;
  border-radius: 5px;
  font-size: var(--font-size--small);
}

#subhead {
  max-width: 1020px;
  margin-top: 16px;
  margin-bottom: 32px;
}

#hero-container {
  max-width: 1200px;
  height: 100%;
  position: relative;
}

#hero {
  max-width: 100%;
  height: inherit;
  display: block;
  object-fit: cover;
}

#sticker-container {
  width: 180px;
  height: 103.96px; /* scaling is 1.731 */
  position: absolute;
  top: -40px;
  right: -55px;
  transform: rotate(16deg);
  transition-duration: 0.2s;
  filter: drop-shadow(0px 0px 0px rgba(0, 8, 30, 0.3));
}

#sticker {
  width: inherit;
  height: inherit;
  position: inherit;
  top: 0px;
  right: 0px;
  -webkit-clip-path: path('M97.6,0,95.2,5.05,90,16,84.82,5.05,82.43,0,80.54,5.26,76.45,16.64,70.18,6.3,67.26,1.49,65.94,7,63.07,18.74,55.65,9.15l-3.5-4.51-.65,5.65L50.09,22.42l-8.71-8.53L37.16,9.78l.26,5.88L38,28,27.63,21.17l-5.25-3.49,1.73,6.05L27.58,36,15.34,32.47,8.19,30.41l4.71,5.77,8.35,10.2L8.52,49.74,0,52l8.52,2.25,12.73,3.36L12.9,67.79,8.19,73.56l7.15-2.06L27.58,68,24.1,80.22l-1.72,6.07,5.25-3.48L38,76l-.53,12.38-.26,5.87,4.22-4.14,8.73-8.54,1.41,12.13.66,5.66,3.49-4.52,7.43-9.59L66,97l1.33,5.48,2.92-4.82,6.24-10.3,4.09,11.37L82.43,104l2.39-5L90,88l5.18,10.9,2.42,5,1.89-5.26,4.07-11.36,6.27,10.33,2.92,4.82L114.08,97l2.86-11.8,7.42,9.59,3.5,4.51.65-5.66,1.42-12.13,8.73,8.55,4.21,4.11-.26-5.88L142.08,76l10.34,6.85,5.21,3.49-1.73-6.05L152.42,68l12.24,3.51,7.15,2-4.71-5.76-8.34-10.2,12.73-3.36L180,52l-8.52-2.24-12.73-3.36,8.35-10.2,4.71-5.77-7.14,2.05L152.42,36l3.48-12.23,1.73-6.09-5.25,3.48L142.06,28l.53-12.38.26-5.87-4.21,4.12-8.73,8.55-1.42-12.13-.65-5.66-3.5,4.52-7.4,9.57L114.07,7l-1.32-5.47L109.82,6.3l-6.26,10.34L99.47,5.26Z');
  clip-path: path('M97.6,0,95.2,5.05,90,16,84.82,5.05,82.43,0,80.54,5.26,76.45,16.64,70.18,6.3,67.26,1.49,65.94,7,63.07,18.74,55.65,9.15l-3.5-4.51-.65,5.65L50.09,22.42l-8.71-8.53L37.16,9.78l.26,5.88L38,28,27.63,21.17l-5.25-3.49,1.73,6.05L27.58,36,15.34,32.47,8.19,30.41l4.71,5.77,8.35,10.2L8.52,49.74,0,52l8.52,2.25,12.73,3.36L12.9,67.79,8.19,73.56l7.15-2.06L27.58,68,24.1,80.22l-1.72,6.07,5.25-3.48L38,76l-.53,12.38-.26,5.87,4.22-4.14,8.73-8.54,1.41,12.13.66,5.66,3.49-4.52,7.43-9.59L66,97l1.33,5.48,2.92-4.82,6.24-10.3,4.09,11.37L82.43,104l2.39-5L90,88l5.18,10.9,2.42,5,1.89-5.26,4.07-11.36,6.27,10.33,2.92,4.82L114.08,97l2.86-11.8,7.42,9.59,3.5,4.51.65-5.66,1.42-12.13,8.73,8.55,4.21,4.11-.26-5.88L142.08,76l10.34,6.85,5.21,3.49-1.73-6.05L152.42,68l12.24,3.51,7.15,2-4.71-5.76-8.34-10.2,12.73-3.36L180,52l-8.52-2.24-12.73-3.36,8.35-10.2,4.71-5.77-7.14,2.05L152.42,36l3.48-12.23,1.73-6.09-5.25,3.48L142.06,28l.53-12.38.26-5.87-4.21,4.12-8.73,8.55-1.42-12.13-.65-5.66-3.5,4.52-7.4,9.57L114.07,7l-1.32-5.47L109.82,6.3l-6.26,10.34L99.47,5.26Z');
  overflow: hidden;
}

#sticker-container:hover {
  filter: drop-shadow(0px 10px 5px rgba(0, 8, 30, 0.3));
  transform: scale(1.2, 1.2) rotate(8deg);
}

#sticker img {
  width: 100%;
  position: absolute;
}

#shine {
  width: 60%;
  height: 100%;
  position: absolute;
  top: 0px;
  left: -190px;
  transform: skewX(-30deg);
  background-image: -webkit-linear-gradient(left, rgba(255,255,255,0) 0, rgba(255,255,255,0.8) 50%, rgba(255,255,255,0) 100%);
  animation: shine 6s ease-in infinite;
}

#bio, #contact {
  max-width: 1500px;
}

#contact {
  margin-top: 40px;
}

#img-container {
  max-width: 500px;
  height: auto;
  margin: auto;
  display: block;
}

.project img {
  max-width: 100%;
  height: auto;
  display: block;
}

.project p {
  max-width: 700px;
  margin-top: 16px;
}

/* GENERAL STYLING */
::selection {
  background: rgb(255, 221, 70);
}

#bio a {
  border-bottom: 4px solid rgb(255, 221, 70);
}

#contact a {
  border-bottom: 2px solid rgb(255, 221, 70);
}

#box-2 a:hover {
  background-color: rgb(255, 221, 70);
  color: #157d4e;
}

#img-container {
  transition-duration: 0.2s;
}

#img-container:hover {
  transform: translate(0px, -10px);
}

#box-3--vocable .btn {
  background-color: rgba(92, 38, 155, 0.3);
  transition: 0.2s;
}

#box-3--vocable .btn:hover {
  background-color: rgba(92, 38, 155, 0.8);
}

#box-4--waterpik .btn {
  background-color: rgba(39, 57, 160, 0.3);
  transition: 0.2s;
}

#box-4--waterpik .btn:hover {
  background-color: rgba(39, 57, 160, 0.8);
}

#box-5--natgeo .btn {
  background-color: rgba(255, 224, 140, 0.6);
  transition: 0.2s;
}

#box-5--natgeo .btn:hover {
  background-color: rgba(255, 224, 140, 1);
}

/* TYPOGRAPHY */
:root {
  /* based on minor third type scale https://type-scale.com/ */
  --font-size--small: calc((19.2/16) * 1rem); /* 19.2px */
  --font-size--default: calc((23.04/16) * 1rem); /* 23.04px */
  --font-size--medium: calc((27.65/16) * 1rem); /* 27.65px */
  --font-size--large: calc((33.18/16) * 1rem); /* 33.18px */
  --font-size--xlarge: calc((39.81/16) * 1rem); /* 39.81px */
}

h1, h2 {
  font-size: var(--font-size--medium);
  font-weight: 700;
  color: #fff;
}

p {
  font-size: var(--font-size--default);
  color: #fff;
}

a, a:visited {
  color: #fff;
  text-decoration: none;
}

#name, #subhead {
  color: #222;
}

#bio, #bio a {
  font-size: var(--font-size--xlarge);
  font-weight: 700;
}

#box-5--natgeo h2, #box-5--natgeo p, #box-5--natgeo .btn{
  color: #222;
}

/* ANIMATIONS */
@keyframes shine {
  0% { left: -290px; }
  33% { left: 290px; }
  100% { left: 290px; }
}

/* MEDIA QUERIES */
@media (max-width: 1800px) {
  #bio, #bio a {
    font-size: var(--font-size--large);
  }
}

@media (max-width: 1400px) {
  #bio, #bio a {
    font-size: var(--font-size--medium);
  }
}

@media (max-width: 1000px) {
  main {
    grid-template-columns: 1fr;
    grid-template-rows: repeat(5, auto);
  }

  #box-1 {
    grid-column-start: 1;
    grid-row-start: 1;
    overflow: hidden;
  }

  #box-2 {
    grid-column-start: 1;
    grid-row-start: 2;
  }

  #box-3--vocable {
    grid-column-start: 1;
    grid-row-start: 3;
  }

  #box-4--waterpik {
    grid-column-start: 1;
    grid-row-start: 4;
  }

  #box-5--natgeo {
    grid-column-start: 1;
    grid-row-start: 5;
  }

  .btn {
    width: 100%;
    padding: 20px 0px;
    text-align: center;
  }

  #box-3--vocable .btn {
    background-color: rgba(92, 38, 155, 0.6);
    transition: 0.2s;
  }

  #box-4--waterpik .btn {
    background-color: rgba(39, 57, 160, 0.6);
    transition: 0.2s;
  }

  #box-5--natgeo .btn {
    background-color: rgba(255, 224, 140, 0.8);
    transition: 0.2s;
  }

  p {
    font-size: var(--font-size--small);
    line-height: 1.4em;
  }

  #subhead {
    margin-top: 8px;
    margin-bottom: 24px;
  }

  #bio, #bio a {
    font-size: var(--font-size--default);
  }

  #bio a {
    border-bottom: 2px solid rgb(255, 221, 70);
  }

  #sticker {
    width: 160px;
    height: 92.43px; /* scaling is 1.731 */
    top: 0px;
    right: 0px;
    -webkit-clip-path: path('M86.76,0,84.62,4.49,80,14.18,75.4,4.49,73.27,0,71.59,4.68,68,14.79,62.38,5.6,59.79,1.32,58.61,6.19,56.07,16.66,49.46,8.14l-3.1-4-.58,5L44.52,19.93l-7.74-7.58L33,8.69l.23,5.23.48,11-9.18-6.1-4.67-3.1,1.54,5.38L24.52,32,13.64,28.86,7.28,27l4.19,5.13,7.42,9.06-11.32,3L0,46.21l7.57,2,11.32,3-7.42,9.07L7.28,65.38l6.36-1.82,10.88-3.13-3.1,10.88L19.89,76.7l4.67-3.09,9.18-6.09-.48,11L33,83.74l3.75-3.67,7.76-7.6L45.8,83.25l.58,5,3.11-4,6.6-8.53,2.54,10.48,1.18,4.86,2.6-4.28L68,77.64l3.63,10.11,1.68,4.67,2.13-4.49L80,78.24l4.61,9.69,2.15,4.49,1.68-4.68,3.61-10.1,5.58,9.19,2.59,4.28,1.18-4.86,2.54-10.49,6.6,8.52,3.11,4,.58-5,1.26-10.79,7.76,7.6L127,83.73l-.22-5.22-.48-11,9.19,6.09,4.63,3.1-1.53-5.38-3.1-10.88,10.89,3.11,6.35,1.83-4.18-5.12-7.42-9.07,11.32-3,7.56-2-7.57-2-11.32-3,7.42-9.06L152.72,27l-6.35,1.83L135.48,32l3.1-10.87,1.53-5.41-4.66,3.09-9.18,6.1.48-11L127,8.69l-3.74,3.66-7.77,7.59L114.22,9.16l-.59-5-3.1,4-6.59,8.51L101.4,6.19l-1.18-4.87L97.62,5.6l-5.57,9.19L88.42,4.68Z');
    clip-path: path('M86.76,0,84.62,4.49,80,14.18,75.4,4.49,73.27,0,71.59,4.68,68,14.79,62.38,5.6,59.79,1.32,58.61,6.19,56.07,16.66,49.46,8.14l-3.1-4-.58,5L44.52,19.93l-7.74-7.58L33,8.69l.23,5.23.48,11-9.18-6.1-4.67-3.1,1.54,5.38L24.52,32,13.64,28.86,7.28,27l4.19,5.13,7.42,9.06-11.32,3L0,46.21l7.57,2,11.32,3-7.42,9.07L7.28,65.38l6.36-1.82,10.88-3.13-3.1,10.88L19.89,76.7l4.67-3.09,9.18-6.09-.48,11L33,83.74l3.75-3.67,7.76-7.6L45.8,83.25l.58,5,3.11-4,6.6-8.53,2.54,10.48,1.18,4.86,2.6-4.28L68,77.64l3.63,10.11,1.68,4.67,2.13-4.49L80,78.24l4.61,9.69,2.15,4.49,1.68-4.68,3.61-10.1,5.58,9.19,2.59,4.28,1.18-4.86,2.54-10.49,6.6,8.52,3.11,4,.58-5,1.26-10.79,7.76,7.6L127,83.73l-.22-5.22-.48-11,9.19,6.09,4.63,3.1-1.53-5.38-3.1-10.88,10.89,3.11,6.35,1.83-4.18-5.12-7.42-9.07,11.32-3,7.56-2-7.57-2-11.32-3,7.42-9.06L152.72,27l-6.35,1.83L135.48,32l3.1-10.87,1.53-5.41-4.66,3.09-9.18,6.1.48-11L127,8.69l-3.74,3.66-7.77,7.59L114.22,9.16l-.59-5-3.1,4-6.59,8.51L101.4,6.19l-1.18-4.87L97.62,5.6l-5.57,9.19L88.42,4.68Z');
  }
}

@media (hover: none) {
  #sticker-container:hover {
    filter: none;
  }

  #sticker:hover {
    transform: scale(1, 1) rotate(16deg);;
  }

  .project a img:hover {
    transform: none;
  }
}

